# Blokus_Reinforcement_Learning

./: Agent.md  README.md  Terminal_game.py  blockus.py  blokus_env.py  blokus_env_masked.py  board.py  game.py  game_controller.py  global_constants.py  main.py  main_menu.py  move_generator.py  piece.py  piece_selector_ui.py  pieces_defintion.py  player.py  pyproject.toml  requirements.txt  terminal_game_with_ui.py  test_requirements.py  train_blokus.py
Blokus_Reinforcement_Learning/: requirements.txt
Blokus_Reinforcement_Learning-1/: README.md
Blokus_Reinforcement_Learning-1/env/: blokus_env_multi_agent_ray_rllib.py
Blokus_Reinforcement_Learning/agent/: PPO2.py
agent/: PPO.py  PPO2.py  multiagent_selfplay.py  test.py  test_env_reward_end_game.py  test_multiagent_env_smoke.py  test_multiagent_env_v2.py  test_multiagent_env_v3.py  test_multiagent_rllib.py  train_multiagent_rllib_v2.py  train_multiagent_rllib_v3.py  train_rllib_selfplay.py
env/: blokus_env.py  blokus_env_masked.py  blokus_env_multi_agent.py  blokus_env_multi_agent2.py  blokus_env_multi_agent_pettingzoo.py  blokus_env_multi_agent_ray_rllib.py  blokus_env_reward_end_game.py  blokus_multiagent_env_v2.py  blokus_multiagent_env_v3.py
game/: blockus.py  board.py  board_ui.py  game.py  move_generator.py  piece.py  player.py
