[project]
name = "blokus-reinforcment-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "colorama>=0.4.6",
    "ray>=2.46.0",
    "sb3-contrib>=2.6.0",
    "stable-baselines3>=2.6.0",
    "tensorboard>=2.19.0",
    "tree>=0.2.4",
]
