[project]
name = "blokus-reinforcment-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "colorama>=0.4.6",
    "dm-tree>=0.1.9",
    "gymnasium==1.0.0",
    "logging>=0.4.9.6",
    "lz4>=4.4.4",
    "openai>=1.93.0",
    "pettingzoo>=1.25.0",
    "ray[rllib,tune]>=2.46.0",
    "sb3-contrib>=2.6.0",
    "scipy>=1.16.0",
    "stable-baselines3>=2.6.0",
    "tensorboard>=2.19.0",
    "tree>=0.2.4",
]
